@@ -10,6 +10,9 @@
  - (bal) scp.c 'limit' conflicts with Cray.  Rename to 'limitbw'
  - (bal) Collection of Cray patches (bsd-cray.h fix for CRAYT3E and improved
    guessing rules)
+ - (bal) Disable Privsep for Tru64 after pre-authentication due to issues
+   with SIA.  Also, clean up of tru64 support patch by Chris Adams
+   <cmadams@hiwaay.net>
 
 20030318
  - (tim) [configure.ac openbsd-compat/bsd-misc.c openbsd-compat/bsd-misc.h]
@@ -1235,4 +1238,4 @@
      save auth method before monitor_reset_key_state(); bugzilla bug #284;
      ok provos@
 
-$Id: ChangeLog,v 1.2636 2003/03/21 01:05:37 mouring Exp $
+$Id: ChangeLog,v 1.2637 2003/03/21 01:18:09 mouring Exp $
